--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 		buyers and sellers be?</p>
 	<br>
 	<p>The inability to see properties during lockdown resulted in a dramatic decline in transaction count. Normally,
-		the NYC sees about 7,000 sold counts in June 2018 and 2019 but this year it was about 3,000 and even less than 3,000 in April.
+		the NYC sees about 7,000 sold counts in June 2018 and 2019 but this year it was about 3,000 and even less than 3,000 in April 2020.
 	</p>
 
 
